--- a/portfolio.css
+++ b/portfolio.css
@@ -5,11 +5,22 @@
 
 html{
     scroll-behavior: smooth;
+    
 }
+
+.section{
+    height:100vh;
+    width: 100vw;
+
+}
+
 
 body{
     color:white;
+   width: fit-content;
+   height: 100%;
 }
+
 h1{
     padding-right:60px;
     
@@ -145,7 +156,7 @@ h1{
 #home{
     border:none;
     color: rgb(8, 8, 8);
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     font-size: 20px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-bottom:200px;
@@ -425,7 +436,7 @@ h1{
 
 .project-section{
   
-    background-color: rgb(251, 251, 251);
+    background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction:row;
     justify-content:space-around;
@@ -439,6 +450,7 @@ h1{
 
 
 .factor{
+    
     width: 500px;
     height: 550px;
     border:1px solid;
@@ -485,7 +497,8 @@ h1{
 
 
 .contact{
-    background-color: rgb(2, 2, 55);
+   
+    
 }
 
 .contact-title{
@@ -505,10 +518,11 @@ h1{
     padding-top:250px;
     color: whitesmoke;
     font-size: 35px;
-    background-color: rgb(2,2,55);
-    padding-left:50% ;
-    padding-right:50% ;
+    background-color: rgb(2, 2, 55);
+    padding-left:600px;
+    padding-right:600px ;
     padding-bottom: 400px;
+    width: 500px;
 }
 
 .p1{
