--- a/portfolio.css
+++ b/portfolio.css
@@ -7,11 +7,25 @@ html{
     scroll-behavior: smooth;
     
 }
-
-.section{
-    height:100vh;
+section{
+    height: 100vh;
     width: 100vw;
-
+}
+.home{
+    height: 100vh;
+    width: 100vw;
+}
+.skill{
+    height: 100vh;
+    width: 100vw;
+}
+.praject{
+    height: 100vh;
+    width: 100vw;
+}
+.contact{
+    height: 100vh;
+    width: 100vw;
 }
 
 
